Add remark on parameters evaluation order to user manual

--- a/doc/IMITATOR-user-manual.tex
+++ b/doc/IMITATOR-user-manual.tex
@@ -625,6 +625,10 @@ Examples of queue definitions are given below:
 \end{table}
 
 \begin{remark}
+The parameters of a function are evaluated from left to right.
+\end{remark}
+
+\begin{remark}
 Some functions, mistakenly called "Side-effects functions" allow the modification of collections "in-place" and therefore are subject to side-effects.
 Side-effects functions can only be used in updates, more precisely in the body of the \styleIMI{let} bloc of an update.
 \end{remark}
