--- a/doc/commons.tex
+++ b/doc/commons.tex
@@ -286,8 +286,8 @@
 
 
 % Current version
-\newcommand{\imitatorversion}{3.2}
-\newcommand{\imitatorversionname}{Cheese Blueberries}
+\newcommand{\imitatorversion}{3.3-alpha}
+\newcommand{\imitatorversionname}{Cheese Caramel au beurre salé}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
