--- a/doc/graphics-credits.tex
+++ b/doc/graphics-credits.tex
@@ -49,6 +49,9 @@
 	version 3.2 & \includegraphics[width=.15\textwidth]{logo-3-2-300.png} & \href{https://www.publicdomainpictures.net/en/view-image.php?image=117097&picture=fresh-and-sweet-blueberries}{Fresh And Sweet Blueberries} & Kathy Zinn & \cczero{}
 	%------------------------------------------------------------
 	\\\hline
+	version 3.3 & \includegraphics[width=.15\textwidth]{logo-3-3-300.png} & \href{https://commons.wikimedia.org/wiki/File:Caramels.jpg}{A pile of loose caramels} & Evan-Amos & \ccbysathree{}
+	%------------------------------------------------------------
+	\\\hline
 \end{longtable}
 
 % NOTE: logos can be downloaded at https://creativecommons.org/about/downloads/
