Update bib references

--- a/doc/biblio.bib
+++ b/doc/biblio.bib
@@ -1,3 +1,21 @@
+@inproceedings{AA22,
+  	author    = {Arcile, Johan and Andr{\'e}, {\'E}tienne},
+  	title     = {Zone extrapolations in parametric timed automata},
+	year      = {2022},
+	booktitle = {Proceedings of the 14th {NASA} Formal Methods Symposium ({NFM} 2022)},
+	SHORTbooktitle = {{NFM}},
+	editor    = {Klaus Havelund and Jyo Deshmukh and Ivan Perez},
+	location  = {Caltech, Pasadena, CA, USA},
+	eventdate = {2022-05-24/2022-05-27},
+	publisher = {Springer},
+	series    = {\LNCS{}},
+	toappear  = {true},
+}
+	volume    = {TODO},
+	pages     = {TODO},
+	doi       = {TODO},
+
+	
 @inproceedings{AAPP21,
   	author		=	{Andr{\'e}, {\'E}tienne and Arias, Jaime and Petrucci, Laure and Van de Pol, Jaco},
   	title		=	{Iterative Bounded Synthesis for Efficient Cycle Detection in Parametric Timed Automata},
@@ -437,17 +455,19 @@
 
 
 @inproceedings{AMP21,
-  	author =	{Andr{\'e}, {\'E}tienne and Marinho, Dylan and van de Pol, Jaco},
-  	title =	{A Benchmarks Library for Extended Timed Automata},
-	year =	{2021},
+  	author    = {Andr{\'e}, {\'E}tienne and Marinho, Dylan and van de Pol, Jaco},
+  	title     = {A Benchmarks Library for Extended Timed Automata},
+	year      = {2021},
 	booktitle = {Proceedings of the 15th International Conference on Tests and Proofs ({TAP} 2021)},
 	SHORTbooktitle = {{TAP}},
-	editor = {Frédéric Loulergue and Franz Wotawa},
-	location = {virtual},
+	editor    = {Frédéric Loulergue and Franz Wotawa},
+	location  = {virtual},
 	eventdate = {2021-06-21/2021-06-25},
-	toappear = {true},
-	coreRank = {Brank},
-	keywords = {intc},
+	doi       = {10.1007/978-3-030-79379-1_3},
+	pages     = {39-50},
+	publisher = {Springer},
+	series    = {\LNCS{}},
+	volume    = {12740},
 }
 
 @inproceedings{Andre13FSFMA,
@@ -582,6 +602,47 @@
   	title =	{The Inverse Method},
   	year =	{2013},
 }
+
+@inproceedings{BBFL03,
+	author    = {Gerd Behrmann and
+				Patricia Bouyer and
+				Emmanuel Fleury and
+				Larsen, Kim Guldstrand},
+	editor    = {Hubert Garavel and
+				John Hatcliff},
+	title     = {Static Guard Analysis in Timed Automata Verification},
+	booktitle = {Proceedings of the 9th International Conference on Tools and Algorithms for the Construction and Analysis of Systems ({TACAS} 2003), Held as Part of the Joint European Conferences on Theory and Practice of Software ({ETAPS} 2003)},
+	SHORTbooktitle = {{TACAS}},
+	eventdate = {2003-04-07/2003-04-11},
+	location  = {Warsaw, Poland},
+	series    = {\LNCS{}},
+	volume    = {2619},
+	pages     = {254--277},
+	publisher = {Springer},
+	year      = {2003},
+	doi       = {10.1007/3-540-36577-X_18},
+	timestamp = {Tue, 14 May 2019 10:00:53 +0200},
+	biburl    = {https://dblp.org/rec/conf/tacas/BehrmannBFL03.bib},
+	bibsource = {dblp computer science bibliography, https://dblp.org},
+}
+
+@article{BBLP06,
+	author    = {Gerd Behrmann and
+				Patricia Bouyer and
+				Larsen, Kim Guldstrand and
+				Radek Pel{\'{a}}nek},
+	title     = {Lower and upper bounds in zone-based abstractions of timed automata},
+	journal   = {\STTT{}},
+	volume    = {8},
+	number    = {3},
+	pages     = {204--215},
+	year      = {2006},
+	doi       = {10.1007/s10009-005-0190-0},
+	timestamp = {Thu, 18 May 2017 09:53:11 +0200},
+	biburl    = {http://dblp.uni-trier.de/rec/bib/journals/sttt/BehrmannBLP06},
+	bibsource = {dblp computer science bibliography, http://dblp.org},
+}
+
 
 @article{BDFP04,
   	author =	{Patricia Bouyer and
@@ -746,7 +807,7 @@
 
 @inproceedings{JM09,
 	author    = {Bertrand Jeannet and
-				Antoine Min{\'{e}}},
+				Antoine Miné},
 	title     = {Apron: {A} Library of Numerical Abstract Domains for Static Analysis},
 	booktitle = {Proceedings of the 21st International Conference on Computer Aided Verification ({CAV} 2009)},
 	eventdate = {2009-06-26/2009-07-02},
@@ -760,6 +821,28 @@
 	biburl    = {https://dblp.org/rec/bib/conf/cav/JeannetM09},
 	bibsource = {dblp computer science bibliography, https://dblp.org},
 }
+
+
+@inproceedings{Li09,
+	author    = {Guangyuan Li},
+	editor    = {Joël Ouaknine and
+				Vaandrager, Frits W.},
+	title     = {Checking Timed {B}üchi Automata Emptiness Using {LU}-Abstractions},
+	booktitle = {Proceedings of the 7th International Conference on Formal Modeling and Analysis of Timed Systems ({FORMATS} 2009)},
+	SHORTbooktitle = {{FORMATS}},
+	eventdate = {2009-09-14/2009-09-16},
+	location  = {Budapest, Hungary},
+	series    = {\LNCS{}},
+	volume    = {5813},
+	pages     = {228--242},
+	publisher = {Springer},
+	year      = {2009},
+	doi       = {10.1007/978-3-642-04368-0_18},
+	timestamp = {Tue, 14 May 2019 10:00:38 +0200},
+	biburl    = {https://dblp.org/rec/conf/formats/Li09.bib},
+	bibsource = {dblp computer science bibliography, https://dblp.org},
+}
+
 
 
 @article{LPY97,
@@ -852,6 +935,20 @@
 	year      = {2009},
 }
 
+
+@article{Tripakis09,
+	author    = {Stavros Tripakis},
+	title     = {Checking timed {B}üchi automata emptiness on simulation graphs},
+	journal   = {{ACM} Transactions on Computational Logic},
+	volume    = {10},
+	number    = {3},
+	pages     = {15:1--15:19},
+	year      = {2009},
+	doi       = {10.1145/1507244.1507245},
+	timestamp = {Tue, 06 Nov 2018 12:51:53 +0100},
+	biburl    = {https://dblp.org/rec/journals/tocl/Tripakis09.bib},
+	bibsource = {dblp computer science bibliography, https://dblp.org},
+}
 
 @article{WSWLSDYL15,
 	author    = {Ting Wang and
