Move to 3.3-beta

--- a/doc/commons.tex
+++ b/doc/commons.tex
@@ -286,7 +286,7 @@
 
 
 % Current version
-\newcommand{\imitatorversion}{3.3-alpha}
+\newcommand{\imitatorversion}{3.3-beta}
 \newcommand{\imitatorversionname}{Cheese Caramel au beurre salé}
 
 
